$Id: NEWS,v 1.282 2002-11-18 16:15:38 castaglia Exp $

CVS
---------------------------------
- Bug 1840 - Problem with syslog default destination on HP-UX.  HPUX uses
  a default device of /dev/log.un rather than /dev/log.
- Bug 1844 - DisplayLogin %y macro is off by 1.  Consequence of scoreboarding
  code changes.

1.2.7rc3 - Released 15-11-2002
---------------------------------
- Fixed configure script detection and handling of ncurses (HAVE_LIBNCURSES
  was not being properly defined).
- Added --enable-scoreboard-buffer-size option to configure script, for
  tuning the size of some scoreboard fields (e.g. the full client command
  and the current working directory).
- Bug 1287 - Error compile with autoshadow option.  AIX does not have
  traditional shadow support, and uses other mechanisms.  This means that
  the --enable-autoshadow and --enable-shadow configure options should not
  be used when configuring proftpd for AIX.  The configure script has been
  updated to detect when these options are used on AIX, and to automatically
  disable them.
- Bug 1722 - Can't work magic cookie %F on FreeBSD.
- Make sure session.xfer uses cleared memory so unset structure members
  won't contain random values.
- Fixed handling of AuthAliasOnly, broken slightly by Bug#1567.
- Bug 1800 - Proftpd child segfaults when using a PASS without no USER first.
  mod_wrap was making a bad assumption about the USER name being available.
  This assumption has been corrected.
- Bug 1803 - Check for SIZEOF_UNSIGNED_LONG_LONG to determine LFS support
  breaks some Linux installations
- Bug 1805 - PAM support under Mac OS X
- Bug 1772 - Docs fixup in RPM spec file
- Bug 1398 - there is no log rotate for /var/log/xferlog
- Bug 1814 - class names are truncated in scoreboard entry
- ftptop can now use either curses or ncurses
- Bug 1818 - proftpd doesn't compile on hpux11
- Bug 1760 - AllowOverwrite not operational.
- Bug 1703 - mod_sql_mysql compile error.  This was eventually tracked down